2015-04-17  kitone  <kitone@gna.org>

	* plugins/actions/externalvideoplayer/dialog-external-video-player-preferences.ui:
	* plugins/actions/externalvideoplayer/externalvideoplayer.cc:
	Fix bug #23476 : Add preference close button

2015-04-14  kitone  <kitone@gna.org>

	* plugins/actions/externalvideoplayer/dialog-external-video-player-preferences.ui:
	* plugins/actions/externalvideoplayer/externalvideoplayer.cc:
	Fix bug #23476 : Allow configuring the delay for external player.

2015-04-12  kitone  <kitone@gna.org>

	* share/ui/subtitleeditor.ui:
	* src/gui/application.cc:
	* src/gui/application.h:
	Fix bug #22476 : Remember video and waveform window size

2015-04-12  kitone  <kitone@gna.org>

	* plugins/actions/documentmanagement/documentmanagement.cc:
	* src/gui/dialogfilechooser.cc:
	* src/gui/dialogfilechooser.h:
	Fix bug #20672 : Automatically put the extension when saving a project file

2015-04-12  kitone  <kitone@gna.org>

	* plugins/actions/documentmanagement/documentmanagement.cc:
	* src/documentsystem.cc:
	* src/documentsystem.h:
	Fix bug #23148 : Create new untilted name with extension.

2015-04-12  kitone  <kitone@gna.org>

	* plugins/actions/documentmanagement/documentmanagement.cc:
	Fix bug #23148 : Default to video file name when saving new subtitles.

2015-04-12  kitone  <kitone@gna.org>

	* src/subtitleformatsystem.cc:
	* src/subtitleformatsystem.h:
	Add method get_extension_of_format.

2015-04-12  kitone  <kitone@gna.org>

	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	Refactoring, using the set_filename_from_another_uri introduce in the previous commit.

2015-04-12  kitone  <kitone@gna.org>

	* src/gui/dialogfilechooser.cc:
	* src/gui/dialogfilechooser.h:
	Add the ability to setup uri from another one using dialogfilechooser.

2015-04-12  kitone  <kitone@gna.org>

	* src/gui/dialogfilechooser.cc:
	* src/utility.cc:
	* src/utility.h:
	Refactoring code to change extension of filename (dialog save document).
